Updating some classes and adding new windows with their respective events